# ams

./: .cvsignore  .gitignore  AUTHORS  A_tutorial08_ParameterView.ams  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  THANKS  aclocal.m4  actionmidibinding.cpp  actionmidibinding.h  actionparameter.cpp  actionparameter.h  actionparametereditor.cpp  actionparametereditor.h  alsa_driver.cc  alsa_driver.h  ams.pro  ams_de.ts  boolmidibinding.cpp  boolmidibinding.h  boolparameter.cpp  boolparameter.h  boolparametereditor.cpp  boolparametereditor.h  box.cpp  box.h  canvas.cpp  canvas.h  canvasfunction.cpp  canvasfunction.h  canvasview.cpp  canvasview.h  capture.cpp  capture.h  colordef02.acs  (+203 more)
demos/: JungleBird.ams  Makefile.am  SineSolo.ams  analog_memory_1.ams  bitgrinder_1.ams  example_ams_demo.ams  example_ams_demo_scope_spectrum.ams  example_ams_demo_scope_spectrum_drums.ams  example_ams_demo_scope_spectrum_mcp_phaser.ams  example_ams_demo_scope_spectrum_mcpvcf.ams  example_barberpole.ams  example_barberpole_up_down.ams  example_basic.ams  example_basic_vcf.ams  example_basic_vcf_gverb_mcpfilter_env.ams  example_basic_vcf_reverb.ams  example_basic_vcf_reverb_mcpfilter_env.ams  example_cvs.ams  example_env_vcf.ams  example_fm.ams  example_phaser_bassclang.ams  example_phaser_basspad.ams  example_portamento.ams  example_simple_cembalo.ams  example_vc_panning.ams  example_vc_panning_lfo.ams  example_vcdoubledecay.ams  example_vcorgan_6.ams  hysteresis_1.ams  v8_seq_demo_1.ams  v8_seq_demo_2.ams  v8_seq_demo_3.ams  vcdelay_1.ams
events/: descriptionevent.h
examples/: A_tutorial08_ParameterView.ams  bass_presets.ams  bass_presets_vcenv.ams  chorus_drops.ams  chorus_drops2.ams  example_ams_demo.ams  example_phaser_bassclang.ams  example_presets.ams  example_presets_3vco.ams  example_ringmod.ams  sequence03b.ams
instruments/: bass_presets.ams  bass_presets_vcenv.ams  example_presets.ams  example_presets_3vco.ams  hplp_instrument.ams  hplp_instrument_pocketdial.ams  miniams.ams  miniams_pan.ams  miniams_pan_drift.ams  miniams_pan_lfo.ams  miniams_vcenv2.ams  phaser_instrument.ams  phaser_instrument_pan.ams  phaser_instrument_pan_lfo.ams
interfaces/: describable.h  observer.h  subject.h
man/: ams.1
plugins/: Makefile  Makefile.am  plugin.cpp  plugin.h  test_autoload.cpp  testplugin.cpp  testplugin.h
src/: .cvsignore  Makefile.am  aboutdialog.cpp  ams.desktop  ams.pro  box.cpp  box.h  canvas.cpp  canvasfunction.cpp  colorwidget.h  configdialog.cpp  configdialog.h  envelope.cpp  envelope.h  filter.cpp  function.cpp  function.h  guiwidget.cpp  guiwidget.h  ladspadialog.cpp  ladspadialog.h  m_ad.cpp  m_ad.h  m_advenv.cpp  m_advenv.h  m_advmcv.cpp  m_advmcv.h  m_amp.cpp  m_amp.h  m_analogmemory.cpp  m_analogmemory.h  m_bitgrind.cpp  m_bitgrind.h  m_conv.cpp  m_conv.h  m_cvs.cpp  m_cvs.h  m_delay.cpp  m_delay.h  m_dynamicwaves.cpp  (+114 more)
src/translations/: ams_de.ts  ams_fr.ts
